2002-10-10  Clint Adams  <clint@zsh.org>

        * 17810 (Martin Waitz): Src/utils.c: bung up memory leak with
        POSIX.1e capabilities.

2002-10-06  Bart Schaefer  <schaefer@zsh.org>

	* 17760: Src/lex.c Src/parse.c: Fix case-pattern parsing bug in sh
	emulation.

	* 17714: Src/mkbltnmlst.sh: Fix to 17357, add module dependencies
	even if not adding module autoloads.

2002-10-05  Clint Adams  <clint@zsh.org>

       * 17765: Completion/Debian/Command/_apt: add some missing apt-get
       options.

2002-09-26  Oliver Kiddle  <opk@zsh.org>

	* 17632, 16546 (Felix): Completion/Unix/Command/_cvs: merge
	changes from 4.1 branch

	* 17682 (modified for 4.0): Completion/Zsh/Command/_typeset,
	Doc/Zsh/builtins.yo: add support for -H option to completion

	* unposted: Completion/Unix/Command/_bzip2: recognise also .tbz
	and .tbz2 files

	* Akinori Musha: 17719: Completion/BSD/Command/_bsd_pkg: add
	support for the	pkg_create command

2002-09-19  Bart Schaefer  <schaefer@zsh.org>

	* 17692: Src/builtin.c: Prevent typeset of a positional parameter
	before it can do damage, and improve the error message about it.

2002-09-19  Clint Adams  <clint@zsh.org>

        * 17252: Sven: Completion/Unix/Type/_path_files: fix for use of (z)
        parameter modifier; the first word in the parameter is parsed
        like the first word on a command line, treating parens
        specially

2002-09-17  Peter Stephenson  <pws@csr.com>

	* 17673: Src/exec.c, Test/A01grammar.ztst:
	  for X in Y; true || B; done && X
	executed X on every iteration.  Same bug with true -> false,
	|| -> &&, && -> ||.

2002-09-10  Clint Adams  <clint@zsh.org>

        * 17189: Sven: Completion/Unix/Type/_path_files: better
	splitting of -g-strings; this failed when patterns
	contained spaces

2002-09-06  Clint Adams  <clint@zsh.org>

        * 17629: Completion/Unix/Command/_ssh: patch from Juergen Erhard
        to handle ssh-keygen -f -p, &c.

2002-09-04  Clint Adams  <clint@zsh.org>
