@@ -3,6 +3,12 @@
         * 17810 (Martin Waitz): Src/utils.c: bung up memory leak with
         POSIX.1e capabilities.
 
+2002-10-10  Oliver Kiddle  <opk@zsh.org>
+
+	* 17794: Src/builtin.c, Src/params.c: fix bugs with tied parameters
+	(prevent tying array elements and find correct parameter under
+	alternate name for unsetting)
+
 2002-10-06  Bart Schaefer  <schaefer@zsh.org>
 
 	* 17760: Src/lex.c Src/parse.c: Fix case-pattern parsing bug in sh
